updated SIMLIB_NSKIPMJD to allow for Trest-dependent prescales; see manual

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -1341,6 +1341,7 @@ etc ...
   SIMLIB_IDLOCK:  nnn     # use only LIBID nnn ; skip all others
   SIMLIB_MAXRANSTART: nnn # start at random LIBID among first nnn entries
   SIMLIB_NSKIPMJD:  n     # use every 'n+1'th observation
+  SIMLIB_NSKIPMJD:  2(50),4(100)  # PS=1 for Trest>50, PS=4 for Trest>100 days.
   SIMLIB_IDSKIP:  nn1     # ignore LIBID nn1
   SIMLIB_IDSKIP:  nn2     # ignore LIBID nn2 (add as many as you want)  
   SIMLIB_DUMP:      1     # dump summary of simlib 
