fix true SED feature to include host SED

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -13956,6 +13956,7 @@ Additional reformat options can be specified using {\tt SNLCINP} input mask
     OPT_REFORMAT_FITS = 256 ! exclude SIM truth to look like real data
 
     OPT_REFORMAT_SPECTRA = 1 ! re-write only the spectra in text: lam Flam Flamerr
+    OPT_REFORMAT_SPECTRA = 2 ! write FLUX instead of FLam for astrodash
 \end{verbatim}
 %
 Here is an example command to convert a simulation into a data-like
