write alarm values to output README if LAMBIN_SED_TRUE is set by user

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -4091,7 +4091,8 @@ Commonly used Sersic indices are $n=0.5, 1, 4$
 for Gaussian, exponential and  deVaucouleurs,
 respectively. 
 If there are 2 or more Sersic profiles per galaxy, 
-weights ({\tt w0\_Sersic}-{w9\_Sersic}) are needed.
+weights ({\tt w0\_Sersic}-{w9\_Sersic}) are needed;
+the sum of Sersic weights is 1.
 
 %Finally, the weight ``{\tt w0\_Sersic}'' give the flux-ratio
 %between this component and the total flux. The weight 
