print CMD_JOB from SNANA_code_tests

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -5838,6 +5838,7 @@ set the following sim-input key
  \begin{verbatim}
    LAMBIN_SED_TRUE:    10                 # wavelength bin size (A) for true SED output
    LAMRANGE_SED_TRUE:  <lammin> <lammax>  # optional; defaults explained below
+   VERIFY_SED_TRUE:    1                  # diagnostic dump
 \end{verbatim}
 %
 This option is unique because
