update Fig 1 for data structure

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -326,12 +326,12 @@ format.
 Large data \& sim samples should use FITS format because
 it is much more compact and much faster to read.
 With TEXT format, each event is written to a separate ASCII file.
-With FITS format (Fig.~\ref{fig:data_format}), 
-there are two FITS files: a summary HEAD file
-with a one-row summary per event, and a PHOT file with the
-light curves. For fast reading, the HEAD file includes pointers
-to the PHOT table, so do not catenate FITS files without updating
-these pointers.
+With FITS format, there are two FITS files: a summary HEAD file
+with a one-row summary per event (Fig.~\ref{fig:data_format_head}), 
+and a PHOT file with the light curves (Fig.~\ref{fig:data_format_phot}).
+For fast reading, the HEAD file includes pointers
+to the PHOT table ({\tt PTROBS\_MIN, PTROBS\_MAX}), 
+so do not catenate FITS files without updating these pointers.
 
 \begin{figure} [ht] 
 \begin{center}
@@ -340,52 +340,90 @@ HEAD file:
   variable name              description
 # ---------------------------------------------------------------------
 * SNID                      integer or character ID
+* FAKE                      0=real data, 1=fake overlaid on image, 2=SNANA sim, 
 * RA,DEC                    sky coordinates (degrees)
+* SNTYPE                    integer type assigned by survey (e.g., SPEC type)
 * NOBS                      number of obs (all bands)
-* PTROBS_MIN                points to 1st light curve obs in PHOT file
-* PTROBS_MAX                points to last light curve obs
+* PTROBS_MIN                pointer to 1st light curve obs in PHOT file
+* PTROBS_MAX                pointer to last light curve obs
 * MWEBV[_ERR]               E(B-V) for Milky way
 * REDSHIFT_HELIO[_ERR]      best heliocentric redshift;
                             zSpec if available; else zPhot; else -9
-* REDSHIFT_FINAL[_ERR]      best CMB redshift
+* REDSHIFT_FINAL[_ERR]      best CMB redshift (no VPEC correction)
 * VPEC_[ERR]                pec velocity (km/sec) and error on correction
+
+* PEAKMJD                   approx PEAKMJD; useful to init light curve fit
+* MJD_TRIGGER               MJD when survey trigger is satisfied
+* MJD_DETECT_FIRST          MJD of first detection
+* MJD_DETECT_LAST           MJD of last detection
+
+* HOSTGAL_SB_FLUXCAL_[band] Surface brightness mag at SN location
 * HOSTGAL_NMATCH            number of host matches with DDLR < 4
 * HOSTGAL_NMATCH2           number of host matches with DDLR < 7
+* HOSTGAL_OBJID             integer id of host (long long int)
 * HOSTGAL_RA                R.A. (deg) for center of host
 * HOSTGAL_DEC               declination (deg) for center of host
 * HOSTGAL_SNSEP             transient-host separation, arcsec
+* HOSTGAL_DDLR              SN-host sep in distance-light-radii (d_DLR)
 * HOSTGAL_SPECZ[_ERR]       zSpec of host  (-9 -> not available)
 * HOSTGAL_PHOTOZ[_ERR]      zphot (mean of PDF); -9 -> not available
-* HOSTGAL_ZPHOT_Q[PPP]      redshift containing PPP% of zPDF prob
+* HOSTGAL_ZPHOT_Q[PPP]      redshift containing PPP percent of zPDF prob
+* HOSTGAL_LOGMASS[_ERR]     logmass and error
+* HOSTGAL_LOGSFR[_ERR]      log(star formation rate) and error
 * HOSTGAL_MAG_[band]        host mags for band=u,g,r,i,z,Y
 * HOSTGAL_MAGERR_[band]     uncertainty on above mags
     [Each hostgal_xxx has hostgal2_xxx for 2nd host-match;
      -999 indicates no 2nd host; else values are filled.
      First listed host has smallest DDLR and may not be the true host]
     
+     For simulated data:
 * SIM_TYPE_INDEX            true integer transient type (e.g., 1 for SNIa)
 * SIM_[SSS]                 true sim property SSS
-
+\end{Verbatim}
+\end{center}
+\vspace{-0.5cm}
+\caption{
+  FITS data structure for header file (*HEAD.FITS).
+ }
+\label{fig:data_format_head}
+\end{figure}
+%
+%
+\begin{figure} [ht] 
+\begin{center}
+\begin{Verbatim}[frame=single]
 PHOT file:
 * MJD                      modified Julian date (-777 -> end of light curve)
 * BAND                     e.g.,  u,g,r,i,z
+* CCDNUM                   CCD or detector number
+* IMGNUM                   image number (e.g. exposure number, visit id ...)
+* FIELD                    name of field; e.g., SHALLOW, DEEP, etc ...
 * PHOTFLAG                 bit-mask of information (check data README)
+* PHOTPROB                 RealBogus score, or chi2, or any float metric
 * FLUXCAL                  calibrated flux : mag = 27.5 - 2.5*log10(FLUXCAL)
 * FLUXCALERR               Poisson uncertainty on FLUXCAL; sky+galaxy+source
-* SIM_MAGOBS               true model mag
+
      image properties
 * PSF_SIG1                 PSF Gauss sigma, pixels
 * SKY_SIG                  sky noise (ADU/pixel)
+* SKY_SIG_T                template sky noise (for DIFFIMG, not for SMP)
 * ZEROPT                   image zero point
 * GAIN                     N_photoelectron/ADU = 1.0
+* XPIX                     x-locaton on CCD (in pixels)
+* YPIX                     y-locaton on CCD (in pixels)
+
+    For simulated data:
+* SIM_MAGOBS               true model mag
 \end{Verbatim}
 \end{center}
+\vspace{-0.5cm}
 \caption{
-  FITS data structure.
+  FITS data structure for photometry file (*PHOT.FITS)
  }
-\label{fig:data_format}
+\label{fig:data_format_phot}
 \end{figure}
 
+\bigskip\bigskip
 
 % -------------------------------------------
 \subsection{Citations}
