new sim-input key HOSTLIB_VARNAME_ZPHOT to use alternate ZPHOT[_ERR] column in HOSTLIB

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -4212,6 +4212,7 @@ the sim-input file (or via command-line override):
    HOSTLIB_DZTOL:  a0,a1,a2,,,aN      # default=0.002,0.040
    HOSTLIB_GALID_PRIORITY: xxx yyy    # default= 0 0 
    HOSTLIB_GALID_UNIQUE: 0            # default=0; 1-> assign unique GALID
+   HOSTLIB_VARNAME_ZPHOT:  ZPHOT_xxx  # use this column for ZPHOT[_ERR]
    HOSTLIB_GENZPHOT_FUDGEMAP: 'z0:rms0,z1:rms1,z2:rms2,etc..' #no pad spaces
    HOSTLIB_GENZPHOT_FUDGEPAR: a0 a1 a2 bprob b1 # default = all -9
    HOSTLIB_GENZPHOT_BIAS:     b0 b1 b2 b3  # 3rd order poly(ztrue)
